--- a/package.json
+++ b/package.json
@@ -3,16 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@grapecity/spread-excelio": "^14.0.5",
+    "@grapecity/spread-sheets": "^14.0.5",
+    "@grapecity/spread-sheets-barcode": "^14.0.5",
+    "@grapecity/spread-sheets-charts": "^14.0.5",
+    "@grapecity/spread-sheets-designer": "^14.0.5",
+    "@grapecity/spread-sheets-designer-react": "^14.0.5",
+    "@grapecity/spread-sheets-designer-resources-en": "^14.0.5",
+    "@grapecity/spread-sheets-languagepackages": "^14.0.5",
+    "@grapecity/spread-sheets-pdf": "^14.0.5",
+    "@grapecity/spread-sheets-pivot-addon": "^14.0.5",
+    "@grapecity/spread-sheets-print": "^14.0.5",
+    "@grapecity/spread-sheets-react": "^14.0.5",
+    "@grapecity/spread-sheets-resources-ja": "^14.0.5",
+    "@grapecity/spread-sheets-shapes": "^14.0.5",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
+    "file-saver": "^2.0.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --max_old_space_size=4096 start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
